--- a/css/styles.css
+++ b/css/styles.css
@@ -599,7 +599,7 @@ header {
   display: inline-block;
 }
 
-.footer-social > h2 {
+footer h2 {
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
