--- a/css/styles.css
+++ b/css/styles.css
@@ -305,6 +305,8 @@ header {
   left: 50%;
   transform: translate(-50%, -50%);
 
+  padding: 40px;
+
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -327,6 +329,53 @@ header {
 
 .modal-close .icon-close {
   fill: #000000;
+}
+
+/* Форма заполнения */
+
+.form-input {
+  width: 450px;
+  height: 40px;
+  margin-bottom: 10px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+textarea.form-input {
+  height: 120px;
+  resize: none;
+}
+
+.contact-form h2 {
+  margin-bottom: 12px;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+
+.contact-form p {
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: #757575;
+  text-align: left;
+}
+
+.agreement-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.agreement-text a {
+  text-decoration: underline;
 }
 
 /* Блок преимущества и услуги */
@@ -635,17 +684,19 @@ footer h2 {
   margin: 0;
 } */
 
-/* .mail-label {
-  width: 358px;
-  height: 50px;
-} */
-
-.mail-input {
+.mail-label {
   display: inline-block;
   width: 358px;
   height: 50px;
-  padding-left: 16px;
   margin-right: 12px;
+}
+
+.mail-input {
+  display: inline-block;
+  width: inherit;
+  height: inherit;
+  padding-left: 16px;
+
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
