--- a/css/styles.css
+++ b/css/styles.css
@@ -346,7 +346,17 @@ header {
 textarea.form-input {
   height: 120px;
   resize: none;
+  padding: 12px 16px;
 }
+
+.form-input::placeholder {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+/* */
 
 .contact-form h2 {
   margin-bottom: 12px;
@@ -367,6 +377,17 @@ textarea.form-input {
   text-align: left;
 }
 
+.agreement {
+  display: block;
+  margin-bottom: 30px;
+}
+
+.agreement-check {
+  display: block;
+  width: 15px;
+  height: 15px;
+}
+
 .agreement-text {
   font-size: 14px;
   line-height: 1.71;
@@ -376,6 +397,22 @@ textarea.form-input {
 
 .agreement-text a {
   text-decoration: underline;
+}
+
+.submit-form {
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
 }
 
 /* Блок преимущества и услуги */
