Исправляет переменную в кнопке подписаться

--- a/css/styles.css
+++ b/css/styles.css
@@ -796,7 +796,7 @@ footer h2 {
   height: 50px;
   padding-left: 30px;
 
-  background: #var(--accent-color);
+  background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
   border-radius: 4px;
