--- a/css/styles.css
+++ b/css/styles.css
@@ -788,7 +788,7 @@ footer h2 {
   border-radius: 4px;
   background: var(--darck-background-color);
   font-size: 16px;
-  line-height: 1, 25;
+  line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -808,7 +808,7 @@ footer h2 {
   text-align: left;
   font-weight: bold;
   font-size: 16px;
-  line-height: 1, 87;
+  line-height: 1.87;
 }
 
 .mail-icon {
