Добавляет марджин в формах

--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,11 @@ header {
   border-radius: 4px;
 }
 
+.feedback {
+  display: block;
+  margin-bottom: 20px;
+}
+
 textarea.form-input {
   height: 120px;
   resize: none;
